# mira_sim

./: .gitignore  .gitmodules  Makefile  pyproject.toml
ardupilot/: mav.parm  mav.tlog  mav.tlog.raw
src/bluerov2_control/: package.xml  setup.cfg  setup.py
src/bluerov2_control/bluerov2_control/: camera_calibration_webcam.py  docking_p1.py  docking_p2_controller.py  docking_p2_perception.py
src/bluerov2_control/launch/: docking.launch.py
src/bluerov2_control/resource/: calibration_data.json
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: ArucoPose.msg  Commands.msg  CommandsNormalized.msg  ConfidenceLevel.msg  Depth.msg  EmergencyKill.msg  Heading.msg  Object2D.msg  Telemetry.msg
src/dnt_simulator/launch/: bluerov2_sim.py
src/dnt_simulator/scenarios/: TACC_DOCKING.scn  TACC_PIPELINE.scn  bluerov2.scn  bluerov2_tank.scn
src/dnt_simulator/scripts/: ardusim_patch.py
src/sim_master/: package.xml  setup.cfg  setup.py
src/sim_master/sim_master/: sim_bridge.py
