[project]
name = "sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catkin-pkg>=1.0.0",
    "empy>=4.2",
    "lark-parser>=0.12.0",
    "numpy>=2.3.5",
    "pyaml>=25.7.0",
    "scipy>=1.17.0",
    "transforms3d>=0.4.2",
]
